//
// Copyright 2017 the original author or authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

option go_package = "github.com/opencord/voltha/protos/go/bal";

import "bal_msg_type.proto";
import "bal_osmsg.proto";
import "bal_model_ids.proto";
import "bal_errno.proto";

/*
 * The BAL common message header
 */
message Bal_comm_msg_hdr
{
    uint32         version_major = 2;   /**< Header Major version number */
    uint32         version_minor = 3;   /**< Header Minor version number */
    BalMsgType     msg_type = 4;        /**< Request / Response / Ack / Indication */
    uint32         msg_id = 5;          /**< Message ID – the ID of the message (subID under the message type) */
    uint32         ex_id = 6;           /**< Exchange ID for message tracking between endpoints */
    BalSubsystem   sender = 7;          /**< Sender subsystem - used for additional validation */
    uint32         timestamp = 8;       /**< Timestamp when the message was sent */
    uint64         scratchpad = 10;     /**< Scratchpad used for inter-thread communication */
    uint32         access_term_id = 11; /**< Access Term Id for this BAL message */
    bytes          payload = 12;        /**< Payload follows the header */
}

/** Helper type to determine what the data format of a message should look like */
enum Bal_mgt_group
{
    BAL_MGT_GROUP_KEY = 0;               /**< Key that uniquely identifies object instance */
    BAL_MGT_GROUP_CFG = 1;               /**< Configuration (get/set/clear) */
    BAL_MGT_GROUP_STAT = 2;              /**< Statistics */
    BAL_MGT_GROUP_AUTO = 3;              /**< Autonomous indications */
    BAL_MGT_GROUP_AUTO_CFG = 4;          /**< Autonomous indication configuration */
    BAL_MGT_GROUP__NUM_OF = 5;
}

/** Object message type. Can be a combination of flags. */
enum BalObj_msg_type
{
    BAL_OBJ_MSG_TYPE_INVALID  = 0;
    BAL_OBJ_MSG_TYPE_GET   = 0x01;   /**< Get configuration parameters */
    BAL_OBJ_MSG_TYPE_SET   = 0x02;   /**< Set configuration parameters */
    BAL_OBJ_MSG_TYPE_CLEAR = 0x04;   /**< Clear configuration parameters */
}

/** Object message direction - request or response. */
enum BalObj_msg_dir
{
    BAL_OBJ_MSG_DIR_REQUEST = 0;
    BAL_OBJ_MSG_DIR_RESPONS = 1;
}

/** Information common to all BAL objects */
message BalObj
{
    Bal_comm_msg_hdr     comm_hdr = 1;      /**< Communication header */
    uint32               om_version = 2;    /**< Version of the Object Model definition/messageure */
    BalObjId             obj_type = 3;      /**< An enumerated ID associated with the object being specified */
    Bal_mgt_group        group = 4;         /**< Management group */
    uint32               subgroup = 5;      /**< Subgroup for indications */
    BalObj_msg_type      type = 6;          /**< Type (e.g. get / set / clear)  */
    BalObj_msg_dir       dir = 7;           /**< Direction - request / response */
    BalErrno		 status = 8;        /**< BAL status code (BCM_ERR_OK–success, error code otherwise) */
    uint64               presence_mask = 9; /**< Indicates which attribute parameters are present */
    uint32               err_field_index = 10;  /**< if status != BCM_ERR_OK: index of erroneous attribute or BCMBAL_ERR_FIELD_NONE */
    string               err_text = 11;     /**< if status != BCM_ERR_OK: Error text */
}

/**< Information structure for use with BAL configuration API (get/set/clear)*/
message BalApiCfg
{
    BalObj               bal_obj = 1;
}

/** Information structure for BAL indication configuration API */
message BalAuto
{
    BalObj               bal_obj = 1;
}

/** Information structure for BAL statistics API */
message BalStat
{
    BalObj               bal_obj = 1;
}
